# rust-api

./: Cargo.toml
public/: robot.txt
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
