[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["fs"] }

[dev-dependencies]
httpc-test = "0.1.1"
